--- a/Tabellen/Freitag.ipynb
+++ b/Tabellen/Freitag.ipynb
@@ -1543,6 +1543,11 @@
     "Namen = []\n",
     "for s in sprecher:\n",
     "    #print(f'Sprecher {s}')\n",
+    "    A1 = f'Polaritätsprofil {s}: langsam/schnell'\n",
+    "    B1 = [f'Polaritätsprofil {s}: aufrichtig/unaufrichtig',f'Polaritätsprofil {s}: modern/traditionell',\n",
+    "     f'Polaritätsprofil {s}: gewagt/bodenständig', f'Polaritätsprofil {s}: ruhig/temperamentvoll',f'Polaritätsprofil {s}: einfühlsam/unsensibel']\n",
+    "    \n",
+    "    \n",
     "    A1 = f'Polaritätsprofil {s}: leise/laut'\n",
     "    B1 = [f'Polaritätsprofil {s}: aufrichtig/unaufrichtig',f'Polaritätsprofil {s}: modern/traditionell',\n",
     "     f'Polaritätsprofil {s}: gewagt/bodenständig', f'Polaritätsprofil {s}: ruhig/temperamentvoll',f'Polaritätsprofil {s}: einfühlsam/unsensibel'] \n",
@@ -1562,30 +1567,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "NewNames = [n.replace('/',' bis ') for n in Namen]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-6-86390dc1f654>:2: UserWarning: Pandas requires version '1.4.3' or newer of 'xlsxwriter' (version '1.3.7' currently installed).\n",
-      "  x.to_excel('./Tabellen/results/'+str(z)+'.xlsx', sheet_name='Sheet_name_1')\n"
-     ]
-    }
-   ],
-   "source": [
-    "for x,z in zip(Res_Tabellen,range(len(Res_Tabellen))):\n",
-    "    x.to_excel('./Tabellen/results/'+str(z)+'.xlsx', sheet_name='Sheet_name_1')"
    ]
   },
   {
@@ -1597,42 +1583,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-7-229a6df7bb4d>:2: UserWarning: Pandas requires version '1.4.3' or newer of 'xlsxwriter' (version '1.3.7' currently installed).\n",
-      "  x.to_excel('./Tabellen/crosstab/'+str(z)+'.xlsx', sheet_name='Sheet_name_1')\n"
+      "<ipython-input-7-0631a7824188>:2: UserWarning: Pandas requires version '1.4.3' or newer of 'xlsxwriter' (version '1.3.7' currently installed).\n",
+      "  x.to_excel('./Tabellen/results/'+z+'.xlsx', sheet_name='Sheet_name_1')\n"
      ]
     }
    ],
    "source": [
-    "for x,z in zip(X_Tabellen,range(len(X_Tabellen))):\n",
-    "    x.to_excel('./Tabellen/crosstab/'+str(z)+'.xlsx', sheet_name='Sheet_name_1')"
+    "for x,z in zip(Res_Tabellen,NewNames):\n",
+    "    x.to_excel('./Tabellen/results/'+z+'.xlsx', sheet_name='Sheet_name_1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-22-eaaace8b6b58>:2: UserWarning: Pandas requires version '1.4.3' or newer of 'xlsxwriter' (version '1.3.7' currently installed).\n",
+      "<ipython-input-8-eaaace8b6b58>:2: UserWarning: Pandas requires version '1.4.3' or newer of 'xlsxwriter' (version '1.3.7' currently installed).\n",
       "  x.to_excel('./Tabellen/crosstab/'+str(z)+'.xlsx', sheet_name='Sheet_name_1')\n"
      ]
     }
    ],
    "source": [
     "for x,z in zip(X_Tabellen,NewNames):\n",
-    "    x.to_excel('./Tabellen/crosstab/'+str(z)+'.xlsx', sheet_name='Sheet_name_1')"
+    "    x.to_excel('./Tabellen/crosstab/'+str(z)+'.xlsx', sheet_name='Sheet_name_1')\n"
    ]
   },
   {
